--- a/analysis_report_overleaf.qmd
+++ b/analysis_report_overleaf.qmd
@@ -2765,11 +2765,143 @@ ggexport(
 ```
 
 
+## The Congruence effect
 
+The results show a consistent interaction between the visual imagery (categorized or not) of participants and the effect of the congruence condition on their RTs. The above analyses also showed that an interaction existed between visual and spatial imagery in how they affected RTs. Therefore, we now have three "within-participant" variables characterizing our observations: 1) the visual imagery of a given participant; 2) their spatial imagery; 3) the extent to which the congruence condition affects their RTs, what could be called their own \textit{Congruence effect} (in the explicit and implicit tasks).
 
+To calculate the Congruence effect on a by-participant level, two approaches are possible:
 
+- An **empirical approach**, by averaging the RTs per condition across all trials and subtracting Congruent mean RT minus Incongruent.
 
+- A **model-based approach**, by using the multilevel models we fitted to isolate an estimate representing more accurately the Congruence effect per subject, ,i.e. the varying slope by participant.
 
+Let's compute both methods and plot them against each other.
+
+<!-- Predicting the congruence effect for each subject -->
+```{r congruence_effect}
+#| echo: true
+#| code-summary: "Computing the Congruence effect per subject"
+
+# ═══ Congruence effect by-participant ═════════════════════════════════════════
+
+# ─── Empirical approach ───────────────────────────────────────────────────────
+
+# explicit task
+congruence_effect_ex_empiric <-
+  df_explicit_recipe_b |> 
+  group_by(subjectid, congruence) |> 
+  summarise(mean_rt_ex = mean(rt_explicit)) |> 
+  pivot_wider(
+    names_from = congruence,
+    values_from = mean_rt_ex
+  ) |> 
+  mutate(
+    congruence_eff_ex_emp = uncongruent - congruent,
+    .keep = "unused"
+  )
+
+# implicit task
+congruence_effect_im_empiric <-
+  df_implicit_recipe_b |> 
+  group_by(subjectid, congruence) |> 
+  summarise(mean_rt_im = mean(rt_implicit)) |> 
+  pivot_wider(
+    names_from = congruence,
+    values_from = mean_rt_im
+  ) |> 
+  mutate(
+    congruence_eff_im_emp = uncongruent - congruent,
+    .keep = "unused"
+    )
+
+# ─── Model-based approach ─────────────────────────────────────────────────────
+
+# explicit task
+congruence_effect_ex_mbased <-
+  # selecting the random slope on congruence by subject model
+  all_b_models_fitted[["explicit_b_mods"]][["mod_explicit_4b"]] |> 
+  # estimating the coefficent and intercept by subject
+  estimate_grouplevel() |> 
+  # keeping only the coefficient and reshaping like the original dataframe
+  reshape_grouplevel(indices = "Coefficient")  |>  
+  # "summary" reduces to one row per subject
+  summary() |> 
+  # keeping only the Coefficient column
+  select(-Intercept)  |>  
+  rename("congruence_eff_ex_mb" = congruenceuncongruent)
+
+# implicit task
+congruence_effect_im_mbased <-
+  all_b_models_fitted[["implicit_b_mods"]][["mod_implicit_4b"]] |> 
+  estimate_grouplevel() |> 
+  reshape_grouplevel(indices = "Coefficient")  |>  
+  summary() |> 
+  select(-Intercept)  |>  
+  rename("congruence_eff_im_mb" = congruenceuncongruent)
+
+# ─── Merging both ─────────────────────────────────────────────────────────────
+
+df_congruence_effect <-
+inner_join(
+  congruence_effect_ex_empiric,
+  # subjectid, aphantasia, visual and spatial imagery
+  df_questionnaires %>% select(1, 8:10),
+  by = "subjectid"
+  ) |> 
+  inner_join(
+    congruence_effect_ex_mbased,
+    by = "subjectid"
+  ) |> 
+  inner_join(
+    congruence_effect_im_empiric,
+    by = "subjectid"
+  ) |> 
+  inner_join(
+    congruence_effect_im_mbased,
+    by = "subjectid"
+  ) |> 
+  select(subjectid, aphantasia:spatial_imagery, 2, 6, 7, 8) |> 
+  mutate(across(c(visual_imagery:congruence_eff_im_mb), ~as.numeric(.x))) 
+```
+
+```{r explicit_empirical_vs_modelbased_corr}
+df_congruence_effect |> 
+  ggplot(aes(
+    x = congruence_eff_ex_emp,
+    y = congruence_eff_ex_mb
+  )) +
+  geom_point(aes(color = aphantasia)) + 
+  scale_color_okabeito()
+```
+
+```{r implicit_empirical_vs_modelbased_corr}
+df_congruence_effect |> 
+  ggplot(aes(
+    x = congruence_eff_im_emp,
+    y = congruence_eff_im_mb
+  )) +
+  geom_point(aes(color = aphantasia)) + 
+  scale_color_okabeito()
+```
+
+```{r explicit_empirical_vs_modelbased_distrib}
+df_congruence_effect |> 
+  ggplot() +
+  geom_density(aes(x = congruence_eff_ex_emp), color = "coral", fill = "coral", alpha = .2) +
+  geom_density(aes(x = congruence_eff_ex_mb), color = "aquamarine", fill = "aquamarine", alpha = .2)
+```
+```{r implicit_empirical_vs_modelbased_distrib}
+df_congruence_effect |> 
+  ggplot() +
+  geom_density(aes(x = congruence_eff_im_emp), color = "coral", fill = "coral", alpha = .2) +
+  geom_density(aes(x = congruence_eff_im_mb), color = "aquamarine", fill = "aquamarine", alpha = .2)
+```
+
+We can see that both methods are very convergent. This confirms that the model-based approach is targeting the correct parameter: as of now, for precision purposes (as we can see from the spread of the distributions), this is the value that will be kept for the Congruence effect.
+
+```{r selecting_mb_congruence_effect}
+df_clustering <- df_congruence_effect |> select(subjectid:spatial_imagery, 6, 8)
+```
 
 
 
